tests/ui/missing-fmt.stderr
error: missing #[error("...")] display attribute
 --> $DIR/tests/ui/missing-fmt.rs:7:5
  |
7 |     B(usize),
  |     ^^^^^^^^
